# Sistema-de-VOO

./: CMakeLists.txt  README.md
Codigo/: main.cpp
Documentação/: CadastroAssento.md  Comandos Basicos.txt  Pesquisa.md  Reserva.md  baixareserva.md  cadastroTripulacao.md  cadastroTripulacaoTestes.md  cadastropassageiro.md  cadastrovoo.md  cadastrovooTestes.md  fidelidade.md
Documentação/Código/: Cadastro de Passageiro com a Pesquisa.cpp  CadastroAssento.cpp  cadastrotripulacao.cpp  cadastrovoo.cpp
src/: Baixa em Reserva  Cadastro de Passageiro com a Pesquisa.cpp  Cadastro de Passageiro.cpp  CadastroAssento.cpp  Pesquisa.cpp  Programa de Fidelidade.cpp  Reserva.cpp  baixareserva.h  cadastroassento.h  cadastropassageiro.h  cadastrotripulacao.cpp  cadastrotripulacao.h  cadastrovoo.h  fidelidade.h  main.cpp  main.h  pesquisa.h  reserva.h
src/codigo/: Pesquisa.cpp  Reserva.cpp  baixareserva.cpp  cadastropassageiro.cpp  cadastrovoo.cpp  fidelidade.cpp
test/: Baixaemreserva_test.cpp  CadastroVoo_test.cpp  Passageiro_test.cpp  PesquisaPassageiro_test.cpp  PesquisaTripulante_test.cpp  ProgramadeFidalidade_test.cpp  Reserva_test.cpp  tripulacao_test.cpp  voos_tests.cpp
